--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gapi-script": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-json-view": "^1.21.3",
     "react-scripts": "5.0.1",
