--- a/package.json
+++ b/package.json
@@ -1,44 +1,38 @@
 {
-  "name": "test",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@privy-io/react-auth": "^2.7.0",
-    "@react-oauth/google": "^0.12.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "gapi-script": "^1.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.2.2",
-    "react-json-view": "^1.21.3",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "test",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@privy-io/react-auth": "^2.7.0",
+		"@react-oauth/google": "^0.12.1",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"gapi-script": "^1.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-facebook-login": "^4.1.1",
+		"react-google-login": "^5.2.2",
+		"react-json-view": "^1.21.3",
+		"react-scripts": "5.0.1",
+		"react-spotify-auth": "^1.4.3",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": ["react-app", "react-app/jest"]
+	},
+	"browserslist": {
+		"production": [">0.2%", "not dead", "not op_mini all"],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
