--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
 	"dependencies": {
 		"@privy-io/react-auth": "^2.7.0",
 		"@react-oauth/google": "^0.12.1",
+		"@solana/wallet-adapter-phantom": "^0.9.28",
+		"@solana/wallet-adapter-react": "^0.15.39",
+		"@tanstack/react-query": "^5.90.5",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@web3auth/modal": "^10.5.4",
+		"bs58": "^6.0.0",
+		"buffer": "^6.0.3",
 		"gapi-script": "^1.2.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -16,6 +22,7 @@
 		"react-json-view": "^1.21.3",
 		"react-scripts": "5.0.1",
 		"react-spotify-auth": "^1.4.3",
+		"wagmi": "^2.19.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -25,10 +32,17 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": ["react-app", "react-app/jest"]
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
 	},
 	"browserslist": {
-		"production": [">0.2%", "not dead", "not op_mini all"],
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
